# arcade-controller-design-backend

./: Dockerfile  PCB_CREATION_GUIDE.md  README.md  deploy.sh  ecsTaskExecutionRoleTrust.json  pyproject.toml  td.json  test-request-body.json
app/datas/: MODIFICATION_SUMMARY.md  StickLess.kicad_prl  StickLess.kicad_pro  StickLess.kicad_sch  Switch_24.kicad_mod  fp-info-cache  net_map.json
app/datas/footprints/kailh-choc-hotswap.pretty/: switch_18.kicad_mod  switch_24.kicad_mod  switch_30.kicad_mod
app/datas/footprints/mount.pretty/: MountingHole_3.2mm_M3.kicad_mod
app/output/: RPi_Pico_SMD_TH.kicad_mod  StickLess.kicad_sch  Switch_24.kicad_mod  fp-lib-table
app/src/: config.py  main.py
app/src/routers/: health.py  pcb.py
app/src/schemas/: __init__.py  base.py  pcb.py
app/src/services/: pcb_generator.py
app/src/services/kicad_scripts/: __init__.py  export_dsn.py  pcb_build.py
app/tmp/: after.kicad_pcb  before-routed.kicad_pcb  before.kicad_pcb  before.ses  net_map.json  test_pcb_request.json
aws-config/: README.md  taskdef.json  td-new.json
scripts/: deploy-lightsail.sh  dev-logs.sh  dev-shell.sh  dev-stop.sh  dev.sh  format.sh  lint.sh  push-ecr.sh
